Closed Bug 777956 Opened 14 years ago Closed 14 years ago

With CPG, AutoCompartment no longer needs to store the target object

Categories

(Core :: JavaScript Engine, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla17

People

(Reporter: sfink, Assigned: sfink)

Details

(Whiteboard: [js:t])

Attachments

(1 file)

Happily, it also looks like removing that field may also drop us below an alignment threshold. Just in case you had a million AutoCompartments on the stack... (and I haven't pushed this to try yet, so I may be wrong anyway) I also noticed that the global dummy_class for entering scripts' compartments is no longer used, so I nuked it.
Comment on attachment 646365 [details] [diff] [review] With CPG, AutoCompartment no longer needs to store the target object Kill all the dummies!
Attachment #646365 - Flags: review?(luke) → review+
Whiteboard: [js:t]
Status: NEW → RESOLVED
Closed: 14 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla17
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: