Bug 777956 - With CPG, AutoCompartment no longer needs to store the target object. r=luke